# ajourhold2026

./: .gitignore  pyproject.toml
notebooks/: README_demo-windows.md  demo-windows-conda.ipynb
src/ml_ajourhold/: __init__.py  __main__.py
